Add age, number of children and unique id comparator